--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@ title: Home
 
 <div class='home_box' id='home_left'>
   <h2>
-    Latest Post
+    Softwarenerd
   </h2>
 
-  <div class='post'>
-	  Post
+  <div class='intro'>
+	  Here's an example site.
   </div>
-</div>
-<div class='home_box' id='home_right'>
-  <h2>Featured Projects</h2>
 </div>
